src/ui/snapshots/mathypad__ui__tests__syntax_highlighting_line_references_with_operators.snap
---
source: src/ui/tests.rs
expression: output
---
"┌Mathypad──────────────────────────────────────────────────────────────────────────────────────┐┌Results───────────────┐"
"│   1 $40                                                                                      ││   1 40 $             │"
"│   2 line1/month * 3                                                                          ││   2 120 $/month      │"
"│   3 line1+100                                                                                ││   3 140 $            │"
"│   4 line1*rate-50                                                                            ││   4 170 $            │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────┘"
