src/ui/snapshots/mathypad__ui__tests__syntax_highlighting_variables.snap
---
source: src/ui/tests.rs
expression: output
---
"┌Mathypad──────────────────────────────────────────────────────────────────────────────────────┐┌Results───────────────┐"
"│   1 x = 42                                                                                   ││   1                  │"
"│   2 y = x * 2                                                                                ││   2                  │"
"│   3 result = x + y                                                                           ││   3                  │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"│                                                                                              ││                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────┘"
