src/ui/snapshots/mathypad__ui__tests__text_area_rendering.snap
---
source: src/ui/tests.rs
expression: output
---
"┌Mathypad──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│   1 5 + 3                                                                                                            │"
"│   2 10 kg to lb                                                                                                      │"
"│   3 line1 * 2                                                                                                        │"
"│   4 sin(30 degrees)                                                                                                  │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
